# obsappliance

./: .gitignore  AGENTS.md  LICENSE  README.md  install_obsapp.ps1  install_obsapp.sh  pyproject.toml
src/: OBSapp.command  obsapp.desktop  start_obs.bat  start_obs.sh
src/obsapp/: api.py  config.py  constants.py  main.py  obs_control.py  os_specifics.py  video_ops.py
src/obsapp/gui/: censor_dialog.py  concat_dialog.py  main_menu.py  record_dialog.py  widgets.py
tests/: obsapp_test.py
