[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "obsapp"
version = "0.1.0"
packages = [
    {include = "obsapp", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10"
customtkinter = ">=5.2"
obsws-python = ">=1.7"

[tool.poetry.scripts]
obsapp = "obsapp.main:main"
